# NekoAIEditor

./: .gitignore  README.md  app.py  install_cpu.bat  install_cpu.sh  install_cuda128.bat  install_cuda128.sh  install_cuda132.bat  install_cuda132.sh  install_cuda_auto.bat  install_cuda_auto.sh  pyproject.toml  repair_gradio_stack.bat  repair_gradio_stack.sh  requirements.txt  run.bat  run.sh  run_proxy_safe.bat  run_proxy_safe.sh
assets/: theme.css
examples/: kv_debugger_recipe.md
nekoai/: __init__.py  generation.py  gradio_compat.py  kv_cache_debugger.py  model_manager.py  module_debugger.py  plotting.py  tensor_ops.py  token_inspector.py  ui.py  utils.py  weight_index.py  weight_ops.py
tests/: test_gradio_compat.py  test_gradio_runtime_patch.py  test_kv_cache.py  test_kv_token_text_search.py  test_logit_and_cell_edits.py  test_preview_edits.py  test_tensor_ops.py  test_token_inspector.py
