[project]
name = "nekoai-editor"
version = "1.0.0"
description = "AI WinDbg/IDA style KV Cache debugger and weight editor for local open LLMs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["gradio==6.5.1", "gradio_client==2.0.3", "pydantic==2.10.6", "transformers>=4.53.0,<5.0", "accelerate>=0.34.0", "safetensors>=0.4.5", "plotly>=5.22.0", "pandas>=2.2.0", "sentencepiece>=0.2.0", "protobuf>=4.25.0", "huggingface_hub>=0.33.5,<2.0"]

[tool.ruff]
line-length = 140
